# cmake-tutorial

./: .present.sh  CMakeLists.txt  Makefile  README.md  hello.cpp
app/: CMakeLists.txt  hello.cpp
mylib/: CMakeLists.txt
mylib/include/: mylib.hpp
mylib/src/: mylib.cpp
